--- a/azure-apim-docker/LocalApiMDocker/LocalApiMDocker.csproj
+++ b/azure-apim-docker/LocalApiMDocker/LocalApiMDocker.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>0635cef8-c5a3-41f2-a2e7-592748bcee3f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileRunArguments>--network apim-demo</DockerfileRunArguments>
+    <DockerfileRunArguments>--network apim-demo -p 5000:80 -p 5001:443</DockerfileRunArguments>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
